@@ -1,15 +1,16 @@
-package org.camunda.migration.rewrite.recipes.client.migrate;
+package org.camunda.migration.rewrite.recipes.client;
 
 import java.util.*;
+import java.util.stream.Stream;
 import org.camunda.migration.rewrite.recipes.sharedRecipes.AbstractMigrationRecipe;
-import org.camunda.migration.rewrite.recipes.utils.RecipeConstants;
+import org.camunda.migration.rewrite.recipes.utils.BuilderSpecFactory;
 import org.camunda.migration.rewrite.recipes.utils.RecipeUtils;
+import org.camunda.migration.rewrite.recipes.utils.ReplacementUtils;
 import org.openrewrite.*;
 import org.openrewrite.java.MethodMatcher;
 import org.openrewrite.java.search.UsesMethod;
-import org.openrewrite.java.search.UsesType;
 
-public class ReplaceStartProcessInstanceMethodsRecipe extends AbstractMigrationRecipe {
+public class MigrateStartProcessInstanceMethodsRecipe extends AbstractMigrationRecipe {
 
   @Override
   public String getDisplayName() {
@@ -23,35 +24,28 @@ public class ReplaceStartProcessInstanceMethodsRecipe extends AbstractMigrationR
 
   @Override
   protected TreeVisitor<?, ExecutionContext> preconditions() {
-    return Preconditions.and(
-        Preconditions.or(
-            new UsesType<>(RecipeConstants.Type.PROCESS_ENGINE, true),
-            new UsesType<>(RecipeConstants.Type.RUNTIME_SERVICE, true)),
-        Preconditions.or(
-            new UsesMethod<>(
-                RecipeConstants.Method.START_PROCESS_INSTANCE_BY_KEY
-                    + RecipeConstants.Parameters.ANY,
-                true),
-            new UsesMethod<>(RecipeConstants.Method.CREATE_PROCESS_INSTANCE_BY_KEY, true),
-            new UsesMethod<>(
-                RecipeConstants.Method.START_PROCESS_INSTANCE_BY_ID
-                    + RecipeConstants.Parameters.ANY,
-                true),
-            new UsesMethod<>(RecipeConstants.Method.CREATE_PROCESS_INSTANCE_BY_ID, true),
-            new UsesMethod<>(
-                RecipeConstants.Method.START_PROCESS_INSTANCE_BY_MESSAGE
-                    + RecipeConstants.Parameters.ANY,
-                true),
-            new UsesMethod<>(
-                RecipeConstants.Method.START_PROCESS_INSTANCE_BY_MESSAGE_AND_PROCESS_DEFINITION_ID
-                    + RecipeConstants.Parameters.ANY,
-                true)));
+    return Preconditions.or(
+        new UsesMethod<>(
+            "org.camunda.bpm.engine.RuntimeService startProcessInstanceByKey(..)", true),
+        new UsesMethod<>(
+            "org.camunda.bpm.engine.RuntimeService createProcessInstanceByKey(java.lang.String)",
+            true),
+        new UsesMethod<>(
+            "org.camunda.bpm.engine.RuntimeService startProcessInstanceById(..)", true),
+        new UsesMethod<>(
+            "org.camunda.bpm.engine.RuntimeService createProcessInstanceById(java.lang.String)",
+            true),
+        new UsesMethod<>(
+            "org.camunda.bpm.engine.RuntimeService startProcessInstanceByMessage(..)", true),
+        new UsesMethod<>(
+            "org.camunda.bpm.engine.RuntimeService startProcessInstanceByMessageAndProcessDefinitionId(..)",
+            true));
   }
 
   @Override
-  protected List<RecipeUtils.MethodInvocationSimpleReplacementSpec> simpleMethodInvocations() {
+  protected List<ReplacementUtils.SimpleReplacementSpec> simpleMethodInvocations() {
     return List.of(
-        new RecipeUtils.MethodInvocationSimpleReplacementSpec(
+        new ReplacementUtils.SimpleReplacementSpec(
             new MethodMatcher(
                 // "startProcessInstanceByKey(String processDefinitionKey)"
                 "org.camunda.bpm.engine.RuntimeService startProcessInstanceByKey(java.lang.String)"),
@@ -64,12 +58,12 @@ public class ReplaceStartProcessInstanceMethodsRecipe extends AbstractMigrationR
                                 .send()
                                 .join();
                             """),
+            RecipeUtils.createSimpleIdentifier("camundaClient", "io.camunda.client.CamundaClient"),
             "io.camunda.client.api.response.ProcessInstanceEvent",
-            List.of(
-                new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg(
-                    "processDefinitionKey", 0)),
+            ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
+            List.of(new ReplacementUtils.SimpleReplacementSpec.NamedArg("processDefinitionKey", 0)),
             Collections.emptyList()),
-        new RecipeUtils.MethodInvocationSimpleReplacementSpec(
+        new ReplacementUtils.SimpleReplacementSpec(
             new MethodMatcher(
                 // "startProcessInstanceByKey(String processDefinitionKey, String
                 // businessKey)"
@@ -83,12 +77,12 @@ public class ReplaceStartProcessInstanceMethodsRecipe extends AbstractMigrationR
                                 .send()
                                 .join();
                             """),
+            RecipeUtils.createSimpleIdentifier("camundaClient", "io.camunda.client.CamundaClient"),
             "io.camunda.client.api.response.ProcessInstanceEvent",
-            List.of(
-                new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg(
-                    "processDefinitionKey", 0)),
+            ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
+            List.of(new ReplacementUtils.SimpleReplacementSpec.NamedArg("processDefinitionKey", 0)),
             List.of(" businessKey was removed")),
-        new RecipeUtils.MethodInvocationSimpleReplacementSpec(
+        new ReplacementUtils.SimpleReplacementSpec(
             new MethodMatcher(
                 // "startProcessInstanceByKey(String processDefinitionKey, Map<String, Object>
                 // variableMap)"
@@ -103,13 +97,14 @@ public class ReplaceStartProcessInstanceMethodsRecipe extends AbstractMigrationR
                                 .send()
                                 .join();
                               """),
+            RecipeUtils.createSimpleIdentifier("camundaClient", "io.camunda.client.CamundaClient"),
             "io.camunda.client.api.response.ProcessInstanceEvent",
+            ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
             List.of(
-                new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg(
-                    "processDefinitionKey", 0),
-                new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg("variableMap", 1)),
+                new ReplacementUtils.SimpleReplacementSpec.NamedArg("processDefinitionKey", 0),
+                new ReplacementUtils.SimpleReplacementSpec.NamedArg("variableMap", 1)),
             Collections.emptyList()),
-        new RecipeUtils.MethodInvocationSimpleReplacementSpec(
+        new ReplacementUtils.SimpleReplacementSpec(
             new MethodMatcher(
                 // "startProcessInstanceByKey(String processDefinitionKey, String businessKey,
                 // Map<String, Object> variableMap)"
@@ -124,13 +119,14 @@ public class ReplaceStartProcessInstanceMethodsRecipe extends AbstractMigrationR
                                 .send()
                                 .join();
                               """),
+            RecipeUtils.createSimpleIdentifier("camundaClient", "io.camunda.client.CamundaClient"),
             "io.camunda.client.api.response.ProcessInstanceEvent",
+            ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
             List.of(
-                new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg(
-                    "processDefinitionKey", 0),
-                new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg("variableMap", 2)),
+                new ReplacementUtils.SimpleReplacementSpec.NamedArg("processDefinitionKey", 0),
+                new ReplacementUtils.SimpleReplacementSpec.NamedArg("variableMap", 2)),
             List.of(" businessKey was removed")),
-        new RecipeUtils.MethodInvocationSimpleReplacementSpec(
+        new ReplacementUtils.SimpleReplacementSpec(
             new MethodMatcher(
                 // "startProcessInstanceById(String processDefinitionId)"
                 "org.camunda.bpm.engine.RuntimeService startProcessInstanceById(java.lang.String)"),
@@ -142,12 +138,12 @@ public class ReplaceStartProcessInstanceMethodsRecipe extends AbstractMigrationR
                                 .send()
                                 .join();
                             """),
+            RecipeUtils.createSimpleIdentifier("camundaClient", "io.camunda.client.CamundaClient"),
             "io.camunda.client.api.response.ProcessInstanceEvent",
-            List.of(
-                new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg(
-                    "processDefinitionId", 0)),
+            ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
+            List.of(new ReplacementUtils.SimpleReplacementSpec.NamedArg("processDefinitionId", 0)),
             Collections.emptyList()),
-        new RecipeUtils.MethodInvocationSimpleReplacementSpec(
+        new ReplacementUtils.SimpleReplacementSpec(
             new MethodMatcher(
                 // "startProcessInstanceById(String processDefinitionId, String businessKey)"
                 "org.camunda.bpm.engine.RuntimeService startProcessInstanceById(java.lang.String, java.lang.String)"),
@@ -159,12 +155,12 @@ public class ReplaceStartProcessInstanceMethodsRecipe extends AbstractMigrationR
                                 .send()
                                 .join();
                             """),
+            RecipeUtils.createSimpleIdentifier("camundaClient", "io.camunda.client.CamundaClient"),
             "io.camunda.client.api.response.ProcessInstanceEvent",
-            List.of(
-                new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg(
-                    "processDefinitionId", 0)),
+            ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
+            List.of(new ReplacementUtils.SimpleReplacementSpec.NamedArg("processDefinitionId", 0)),
             List.of(" businessKey was removed")),
-        new RecipeUtils.MethodInvocationSimpleReplacementSpec(
+        new ReplacementUtils.SimpleReplacementSpec(
             new MethodMatcher(
                 // "startProcessInstanceById(String processDefinitionId, Map<String, Object>
                 // variableMap)"
@@ -178,13 +174,14 @@ public class ReplaceStartProcessInstanceMethodsRecipe extends AbstractMigrationR
                                 .send()
                                 .join();
                             """),
+            RecipeUtils.createSimpleIdentifier("camundaClient", "io.camunda.client.CamundaClient"),
             "io.camunda.client.api.response.ProcessInstanceEvent",
+            ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
             List.of(
-                new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg(
-                    "processDefinitionId", 0),
-                new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg("variableMap", 1)),
+                new ReplacementUtils.SimpleReplacementSpec.NamedArg("processDefinitionId", 0),
+                new ReplacementUtils.SimpleReplacementSpec.NamedArg("variableMap", 1)),
             Collections.emptyList()),
-        new RecipeUtils.MethodInvocationSimpleReplacementSpec(
+        new ReplacementUtils.SimpleReplacementSpec(
             new MethodMatcher(
                 // "startProcessInstanceById(String processDefinitionId, String businessKey,
                 // Map<String, Object> variableMap)"
@@ -198,13 +195,14 @@ public class ReplaceStartProcessInstanceMethodsRecipe extends AbstractMigrationR
                                 .send()
                                 .join();
                             """),
+            RecipeUtils.createSimpleIdentifier("camundaClient", "io.camunda.client.CamundaClient"),
             "io.camunda.client.api.response.ProcessInstanceEvent",
+            ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
             List.of(
-                new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg(
-                    "processDefinitionId", 0),
-                new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg("variableMap", 2)),
+                new ReplacementUtils.SimpleReplacementSpec.NamedArg("processDefinitionId", 0),
+                new ReplacementUtils.SimpleReplacementSpec.NamedArg("variableMap", 2)),
             List.of(" businessKey was removed")),
-        new RecipeUtils.MethodInvocationSimpleReplacementSpec(
+        new ReplacementUtils.SimpleReplacementSpec(
             new MethodMatcher(
                 // "startProcessInstanceByMessage(String messageName)"
                 "org.camunda.bpm.engine.RuntimeService startProcessInstanceByMessage(java.lang.String)"),
@@ -217,11 +215,12 @@ public class ReplaceStartProcessInstanceMethodsRecipe extends AbstractMigrationR
                               .send()
                               .join();
                             """),
+            RecipeUtils.createSimpleIdentifier("camundaClient", "io.camunda.client.CamundaClient"),
             "io.camunda.client.api.response.CorrelateMessageResponse",
-            List.of(
-                new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg("messageName", 0)),
+            ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
+            List.of(new ReplacementUtils.SimpleReplacementSpec.NamedArg("messageName", 0)),
             List.of(" please configure you correlationKey")),
-        new RecipeUtils.MethodInvocationSimpleReplacementSpec(
+        new ReplacementUtils.SimpleReplacementSpec(
             new MethodMatcher(
                 // "startProcessInstanceByMessage(String messageName, String businessKey)"
                 "org.camunda.bpm.engine.RuntimeService startProcessInstanceByMessage(java.lang.String, java.lang.String)"),
@@ -234,11 +233,12 @@ public class ReplaceStartProcessInstanceMethodsRecipe extends AbstractMigrationR
                               .send()
                               .join();
                             """),
+            RecipeUtils.createSimpleIdentifier("camundaClient", "io.camunda.client.CamundaClient"),
             "io.camunda.client.api.response.CorrelateMessageResponse",
-            List.of(
-                new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg("messageName", 0)),
+            ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
+            List.of(new ReplacementUtils.SimpleReplacementSpec.NamedArg("messageName", 0)),
             List.of(" please configure you correlationKey", " businessKey was removed")),
-        new RecipeUtils.MethodInvocationSimpleReplacementSpec(
+        new ReplacementUtils.SimpleReplacementSpec(
             new MethodMatcher(
                 // "startProcessInstanceByMessage(String messageName, Map<String, Object>
                 // variableMap)"
@@ -253,12 +253,14 @@ public class ReplaceStartProcessInstanceMethodsRecipe extends AbstractMigrationR
                                 .send()
                                 .join();
                             """),
+            RecipeUtils.createSimpleIdentifier("camundaClient", "io.camunda.client.CamundaClient"),
             "io.camunda.client.api.response.CorrelateMessageResponse",
+            ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
             List.of(
-                new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg("messageName", 0),
-                new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg("variableMap", 1)),
+                new ReplacementUtils.SimpleReplacementSpec.NamedArg("messageName", 0),
+                new ReplacementUtils.SimpleReplacementSpec.NamedArg("variableMap", 1)),
             List.of(" please configure you correlationKey")),
-        new RecipeUtils.MethodInvocationSimpleReplacementSpec(
+        new ReplacementUtils.SimpleReplacementSpec(
             new MethodMatcher(
                 // "startProcessInstanceByMessage(String messageName, String businessKey,
                 // Map<String, Object> variableMap)"
@@ -273,12 +275,14 @@ public class ReplaceStartProcessInstanceMethodsRecipe extends AbstractMigrationR
                                 .send()
                                 .join();
                                     """),
+            RecipeUtils.createSimpleIdentifier("camundaClient", "io.camunda.client.CamundaClient"),
             "io.camunda.client.api.response.CorrelateMessageResponse",
+            ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
             List.of(
-                new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg("messageName", 0),
-                new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg("variableMap", 2)),
+                new ReplacementUtils.SimpleReplacementSpec.NamedArg("messageName", 0),
+                new ReplacementUtils.SimpleReplacementSpec.NamedArg("variableMap", 2)),
             List.of(" please configure you correlationKey", " businessKey was removed")),
-        new RecipeUtils.MethodInvocationSimpleReplacementSpec(
+        new ReplacementUtils.SimpleReplacementSpec(
             new MethodMatcher(
                 // "startProcessInstanceByMessageAndProcessDefinitionId(String messageName,
                 // String
@@ -293,11 +297,12 @@ public class ReplaceStartProcessInstanceMethodsRecipe extends AbstractMigrationR
                                 .send()
                                 .join();
                             """),
+            RecipeUtils.createSimpleIdentifier("camundaClient", "io.camunda.client.CamundaClient"),
             "io.camunda.client.api.response.CorrelateMessageResponse",
-            List.of(
-                new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg("messageName", 0)),
+            ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
+            List.of(new ReplacementUtils.SimpleReplacementSpec.NamedArg("messageName", 0)),
             List.of(" please configure you correlationKey", " processDefinitionId was removed")),
-        new RecipeUtils.MethodInvocationSimpleReplacementSpec(
+        new ReplacementUtils.SimpleReplacementSpec(
             new MethodMatcher(
                 // "startProcessInstanceByMessageAndProcessDefinitionId(String messageName,
                 // String
@@ -312,14 +317,15 @@ public class ReplaceStartProcessInstanceMethodsRecipe extends AbstractMigrationR
                                 .send()
                                 .join();
                             """),
+            RecipeUtils.createSimpleIdentifier("camundaClient", "io.camunda.client.CamundaClient"),
             "io.camunda.client.api.response.CorrelateMessageResponse",
-            List.of(
-                new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg("messageName", 0)),
+            ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
+            List.of(new ReplacementUtils.SimpleReplacementSpec.NamedArg("messageName", 0)),
             List.of(
                 " please configure you correlationKey",
                 " businessKey was removed",
                 " processDefinitionId was removed")),
-        new RecipeUtils.MethodInvocationSimpleReplacementSpec(
+        new ReplacementUtils.SimpleReplacementSpec(
             new MethodMatcher(
                 // "startProcessInstanceByMessageAndProcessDefinitionId(String messageName,
                 // String
@@ -335,12 +341,14 @@ public class ReplaceStartProcessInstanceMethodsRecipe extends AbstractMigrationR
                                 .send()
                                 .join();
                             """),
+            RecipeUtils.createSimpleIdentifier("camundaClient", "io.camunda.client.CamundaClient"),
             "io.camunda.client.api.response.CorrelateMessageResponse",
+            ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
             List.of(
-                new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg("messageName", 0),
-                new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg("variableMap", 2)),
+                new ReplacementUtils.SimpleReplacementSpec.NamedArg("messageName", 0),
+                new ReplacementUtils.SimpleReplacementSpec.NamedArg("variableMap", 2)),
             List.of(" please configure you correlationKey", " processDefinitionId was removed")),
-        new RecipeUtils.MethodInvocationSimpleReplacementSpec(
+        new ReplacementUtils.SimpleReplacementSpec(
             new MethodMatcher(
                 // "startProcessInstanceByMessageAndProcessDefinitionId(String messageName,
                 // String
@@ -357,23 +365,76 @@ public class ReplaceStartProcessInstanceMethodsRecipe extends AbstractMigrationR
                                 .send()
                                 .join();
                             """),
+            RecipeUtils.createSimpleIdentifier("camundaClient", "io.camunda.client.CamundaClient"),
             "io.camunda.client.api.response.CorrelateMessageResponse",
+            ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
             List.of(
-                new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg("messageName", 0),
-                new RecipeUtils.MethodInvocationSimpleReplacementSpec.NamedArg("variableMap", 3)),
+                new ReplacementUtils.SimpleReplacementSpec.NamedArg("messageName", 0),
+                new ReplacementUtils.SimpleReplacementSpec.NamedArg("variableMap", 3)),
             List.of(
                 " please configure you correlationKey",
                 " businessKey was removed",
                 " processDefinitionId was removed")));
   }
 
+  @Override
+  protected List<ReplacementUtils.BuilderReplacementSpec> builderMethodInvocations() {
+    return Stream.concat(
+            BuilderSpecFactory.createBuilderSpecs(
+                "org.camunda.bpm.engine.runtime.ProcessInstantiationBuilder execute(..)",
+                "createProcessInstanceByKey",
+                List.of("businessKey", "setVariables", "processDefinitionTenantId"),
+                Map.ofEntries(
+                    Map.entry(
+                        "createProcessInstanceByKey",
+                        ".bpmnProcessId(#{bpmnProcessId:any(java.lang.String)})"),
+                    Map.entry("setVariables", ".variables(#{variables:any(java.util.Map)})"),
+                    Map.entry("processDefinitionTenantId", ".tenantId(#{tenantId:any(java.lang.String)})")),
+                """
+                  #{camundaClient:any(io.camunda.client.CamundaClient)}
+                      .newCreateInstanceCommand()
+                  """,
+                ".latestVersion()",
+                """
+                      .send()
+                      .join();
+                  """,
+                "io.camunda.client.api.response.ProcessInstanceEvent",
+                Collections.emptyList())
+                .stream(),
+            BuilderSpecFactory.createBuilderSpecs(
+                "org.camunda.bpm.engine.runtime.ProcessInstantiationBuilder execute(..)",
+                "createProcessInstanceById",
+                List.of("businessKey", "setVariables", "processDefinitionTenantId"),
+                Map.ofEntries(
+                    Map.entry(
+                        "createProcessInstanceById",
+                        ".processDefinitionKey(Long.valueOf(#{processDefinitionKey:any(java.lang.String)}))"),
+                    Map.entry("setVariables", ".variables(#{variables:any(java.util.Map)})"),
+                    Map.entry("processDefinitionTenantId", ".tenantId(#{tenantId:any(java.lang.String)})")),
+                """
+                  #{camundaClient:any(io.camunda.client.CamundaClient)}
+                      .newCreateInstanceCommand()
+                  """,
+                "",
+                """
+                      .send()
+                      .join();
+                  """,
+                "io.camunda.client.api.response.ProcessInstanceEvent",
+                Collections.emptyList())
+                .stream())
+        .toList();
+  }
+
+  /*
   static final MethodMatcher executeMethodMatcher =
       new MethodMatcher("org.camunda.bpm.engine.runtime.ProcessInstantiationBuilder execute(..)");
 
   @Override
-  protected List<RecipeUtils.MethodInvocationBuilderReplacementSpec> builderMethodInvocations() {
+  protected List<ReplacementUtils.BuilderReplacementSpec> builderMethodInvocations() {
     return List.of(
-        new RecipeUtils.MethodInvocationBuilderReplacementSpec(
+        new ReplacementUtils.BuilderReplacementSpec(
             executeMethodMatcher,
             Set.of("createProcessInstanceByKey"),
             List.of("createProcessInstanceByKey"),
@@ -386,9 +447,11 @@ public class ReplaceStartProcessInstanceMethodsRecipe extends AbstractMigrationR
                                     .send()
                                     .join();
                                 """),
+            RecipeUtils.createSimpleIdentifier("camundaClient", "io.camunda.client.CamundaClient"),
             "io.camunda.client.api.response.ProcessInstanceEvent",
+            ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
             Collections.emptyList()),
-        new RecipeUtils.MethodInvocationBuilderReplacementSpec(
+        new ReplacementUtils.BuilderReplacementSpec(
             executeMethodMatcher,
             Set.of("createProcessInstanceByKey", "businessKey"),
             List.of("createProcessInstanceByKey"),
@@ -401,9 +464,11 @@ public class ReplaceStartProcessInstanceMethodsRecipe extends AbstractMigrationR
                                     .send()
                                     .join();
                                 """),
+            RecipeUtils.createSimpleIdentifier("camundaClient", "io.camunda.client.CamundaClient"),
             "io.camunda.client.api.response.ProcessInstanceEvent",
+            ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
             List.of(" businessKey was removed")),
-        new RecipeUtils.MethodInvocationBuilderReplacementSpec(
+        new ReplacementUtils.BuilderReplacementSpec(
             executeMethodMatcher,
             Set.of("createProcessInstanceByKey", "processDefinitionTenantId"),
             List.of("createProcessInstanceByKey", "processDefinitionTenantId"),
@@ -417,9 +482,11 @@ public class ReplaceStartProcessInstanceMethodsRecipe extends AbstractMigrationR
                                     .send()
                                     .join();
                                 """),
+            RecipeUtils.createSimpleIdentifier("camundaClient", "io.camunda.client.CamundaClient"),
             "io.camunda.client.api.response.ProcessInstanceEvent",
+            ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
             Collections.emptyList()),
-        new RecipeUtils.MethodInvocationBuilderReplacementSpec(
+        new ReplacementUtils.BuilderReplacementSpec(
             executeMethodMatcher,
             Set.of("createProcessInstanceByKey", "setVariables"),
             List.of("createProcessInstanceByKey", "setVariables"),
@@ -433,9 +500,11 @@ public class ReplaceStartProcessInstanceMethodsRecipe extends AbstractMigrationR
                                     .send()
                                     .join();
                                 """),
+            RecipeUtils.createSimpleIdentifier("camundaClient", "io.camunda.client.CamundaClient"),
             "io.camunda.client.api.response.ProcessInstanceEvent",
+            ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
             Collections.emptyList()),
-        new RecipeUtils.MethodInvocationBuilderReplacementSpec(
+        new ReplacementUtils.BuilderReplacementSpec(
             executeMethodMatcher,
             Set.of("createProcessInstanceByKey", "processDefinitionTenantId", "businessKey"),
             List.of("createProcessInstanceByKey", "processDefinitionTenantId"),
@@ -449,9 +518,11 @@ public class ReplaceStartProcessInstanceMethodsRecipe extends AbstractMigrationR
                                     .send()
                                     .join();
                                 """),
+            RecipeUtils.createSimpleIdentifier("camundaClient", "io.camunda.client.CamundaClient"),
             "io.camunda.client.api.response.ProcessInstanceEvent",
+            ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
             List.of(" businessKey was removed")),
-        new RecipeUtils.MethodInvocationBuilderReplacementSpec(
+        new ReplacementUtils.BuilderReplacementSpec(
             executeMethodMatcher,
             Set.of("createProcessInstanceByKey", "setVariables", "businessKey"),
             List.of("createProcessInstanceByKey", "setVariables"),
@@ -465,9 +536,11 @@ public class ReplaceStartProcessInstanceMethodsRecipe extends AbstractMigrationR
                                     .send()
                                     .join();
                                 """),
+            RecipeUtils.createSimpleIdentifier("camundaClient", "io.camunda.client.CamundaClient"),
             "io.camunda.client.api.response.ProcessInstanceEvent",
+            ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
             List.of(" businessKey was removed")),
-        new RecipeUtils.MethodInvocationBuilderReplacementSpec(
+        new ReplacementUtils.BuilderReplacementSpec(
             executeMethodMatcher,
             Set.of("createProcessInstanceByKey", "processDefinitionTenantId", "setVariables"),
             List.of("createProcessInstanceByKey", "processDefinitionTenantId", "setVariables"),
@@ -482,9 +555,11 @@ public class ReplaceStartProcessInstanceMethodsRecipe extends AbstractMigrationR
                                     .send()
                                     .join();
                                 """),
+            RecipeUtils.createSimpleIdentifier("camundaClient", "io.camunda.client.CamundaClient"),
             "io.camunda.client.api.response.ProcessInstanceEvent",
+            ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
             Collections.emptyList()),
-        new RecipeUtils.MethodInvocationBuilderReplacementSpec(
+        new ReplacementUtils.BuilderReplacementSpec(
             executeMethodMatcher,
             Set.of(
                 "createProcessInstanceByKey",
@@ -503,9 +578,11 @@ public class ReplaceStartProcessInstanceMethodsRecipe extends AbstractMigrationR
                                     .send()
                                     .join();
                                 """),
+            RecipeUtils.createSimpleIdentifier("camundaClient", "io.camunda.client.CamundaClient"),
             "io.camunda.client.api.response.ProcessInstanceEvent",
+            ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
             List.of(" businessKey was removed")),
-        new RecipeUtils.MethodInvocationBuilderReplacementSpec(
+        new ReplacementUtils.BuilderReplacementSpec(
             executeMethodMatcher,
             Set.of("createProcessInstanceById"),
             List.of("createProcessInstanceById"),
@@ -517,9 +594,11 @@ public class ReplaceStartProcessInstanceMethodsRecipe extends AbstractMigrationR
                                     .send()
                                     .join();
                                 """),
+            RecipeUtils.createSimpleIdentifier("camundaClient", "io.camunda.client.CamundaClient"),
             "io.camunda.client.api.response.ProcessInstanceEvent",
+            ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
             Collections.emptyList()),
-        new RecipeUtils.MethodInvocationBuilderReplacementSpec(
+        new ReplacementUtils.BuilderReplacementSpec(
             executeMethodMatcher,
             Set.of("createProcessInstanceById", "businessKey"),
             List.of("createProcessInstanceById"),
@@ -531,9 +610,11 @@ public class ReplaceStartProcessInstanceMethodsRecipe extends AbstractMigrationR
                                     .send()
                                     .join();
                                 """),
+            RecipeUtils.createSimpleIdentifier("camundaClient", "io.camunda.client.CamundaClient"),
             "io.camunda.client.api.response.ProcessInstanceEvent",
+            ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
             List.of(" businessKey was removed")),
-        new RecipeUtils.MethodInvocationBuilderReplacementSpec(
+        new ReplacementUtils.BuilderReplacementSpec(
             executeMethodMatcher,
             Set.of("createProcessInstanceById", "processDefinitionTenantId"),
             List.of("createProcessInstanceById", "processDefinitionTenantId"),
@@ -546,9 +627,11 @@ public class ReplaceStartProcessInstanceMethodsRecipe extends AbstractMigrationR
                                     .send()
                                     .join();
                                 """),
+            RecipeUtils.createSimpleIdentifier("camundaClient", "io.camunda.client.CamundaClient"),
             "io.camunda.client.api.response.ProcessInstanceEvent",
+            ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
             Collections.emptyList()),
-        new RecipeUtils.MethodInvocationBuilderReplacementSpec(
+        new ReplacementUtils.BuilderReplacementSpec(
             executeMethodMatcher,
             Set.of("createProcessInstanceById", "setVariables"),
             List.of("createProcessInstanceById", "setVariables"),
@@ -561,9 +644,11 @@ public class ReplaceStartProcessInstanceMethodsRecipe extends AbstractMigrationR
                                     .send()
                                     .join();
                                 """),
+            RecipeUtils.createSimpleIdentifier("camundaClient", "io.camunda.client.CamundaClient"),
             "io.camunda.client.api.response.ProcessInstanceEvent",
+            ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
             Collections.emptyList()),
-        new RecipeUtils.MethodInvocationBuilderReplacementSpec(
+        new ReplacementUtils.BuilderReplacementSpec(
             executeMethodMatcher,
             Set.of("createProcessInstanceById", "processDefinitionTenantId", "businessKey"),
             List.of("createProcessInstanceById", "processDefinitionTenantId"),
@@ -576,9 +661,11 @@ public class ReplaceStartProcessInstanceMethodsRecipe extends AbstractMigrationR
                                     .send()
                                     .join();
                                 """),
+            RecipeUtils.createSimpleIdentifier("camundaClient", "io.camunda.client.CamundaClient"),
             "io.camunda.client.api.response.ProcessInstanceEvent",
+            ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
             List.of(" businessKey was removed")),
-        new RecipeUtils.MethodInvocationBuilderReplacementSpec(
+        new ReplacementUtils.BuilderReplacementSpec(
             executeMethodMatcher,
             Set.of("createProcessInstanceById", "setVariables", "businessKey"),
             List.of("createProcessInstanceById", "setVariables"),
@@ -591,9 +678,11 @@ public class ReplaceStartProcessInstanceMethodsRecipe extends AbstractMigrationR
                                     .send()
                                     .join();
                                 """),
+            RecipeUtils.createSimpleIdentifier("camundaClient", "io.camunda.client.CamundaClient"),
             "io.camunda.client.api.response.ProcessInstanceEvent",
+            ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
             List.of(" businessKey was removed")),
-        new RecipeUtils.MethodInvocationBuilderReplacementSpec(
+        new ReplacementUtils.BuilderReplacementSpec(
             executeMethodMatcher,
             Set.of("createProcessInstanceById", "processDefinitionTenantId", "setVariables"),
             List.of("createProcessInstanceById", "processDefinitionTenantId", "setVariables"),
@@ -607,9 +696,11 @@ public class ReplaceStartProcessInstanceMethodsRecipe extends AbstractMigrationR
                                     .send()
                                     .join();
                                 """),
+            RecipeUtils.createSimpleIdentifier("camundaClient", "io.camunda.client.CamundaClient"),
             "io.camunda.client.api.response.ProcessInstanceEvent",
+            ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
             Collections.emptyList()),
-        new RecipeUtils.MethodInvocationBuilderReplacementSpec(
+        new ReplacementUtils.BuilderReplacementSpec(
             executeMethodMatcher,
             Set.of(
                 "createProcessInstanceById",
@@ -627,16 +718,36 @@ public class ReplaceStartProcessInstanceMethodsRecipe extends AbstractMigrationR
                                     .send()
                                     .join();
                                 """),
+            RecipeUtils.createSimpleIdentifier("camundaClient", "io.camunda.client.CamundaClient"),
             "io.camunda.client.api.response.ProcessInstanceEvent",
+            ReplacementUtils.ReturnTypeStrategy.USE_SPECIFIED_TYPE,
             List.of(" businessKey was removed")));
+  }
+  */
+
+  @Override
+  protected List<ReplacementUtils.ReturnReplacementSpec> returnMethodInvocations() {
+    return List.of(
+        new ReplacementUtils.ReturnReplacementSpec(
+            new MethodMatcher("org.camunda.bpm.engine.runtime.Execution getProcessInstanceId()"),
+            RecipeUtils.createSimpleJavaTemplate(
+                "String.valueOf(#{any()}.getProcessInstanceKey())")),
+        new ReplacementUtils.ReturnReplacementSpec(
+            // this does not work for message correlation
+            new MethodMatcher("org.camunda.bpm.engine.runtime.Execution getProcessDefinitionId()"),
+            RecipeUtils.createSimpleJavaTemplate(
+                "String.valueOf(#{any()}.getProcessDefinitionKey())")),
+        new ReplacementUtils.ReturnReplacementSpec(
+            // this does not work for message correlation
+            new MethodMatcher("org.camunda.bpm.engine.runtime.Execution getProcessDefinitionKey()"),
+            RecipeUtils.createSimpleJavaTemplate("String.valueOf(#{any()}.getBpmnProcessId())")),
+        new ReplacementUtils.ReturnReplacementSpec(
+            new MethodMatcher("org.camunda.bpm.engine.runtime.Execution getTenantId()"),
+            RecipeUtils.createSimpleJavaTemplate("String.valueOf(#{any()}.getTenantId())")));
   }
 
   @Override
-  protected List<RecipeUtils.MethodInvocationReturnReplacementSpec> returnMethodInvocations() {
-    return List.of(
-        new RecipeUtils.MethodInvocationReturnReplacementSpec(
-            new MethodMatcher("org.camunda.bpm.engine.runtime.Execution getProcessInstanceId()"),
-            RecipeUtils.createSimpleJavaTemplate(
-                "String.valueOf(#{any()}.getProcessInstanceKey())")));
+  protected List<ReplacementUtils.RenameReplacementSpec> renameMethodInvocations() {
+    return Collections.emptyList();
   }
 }
